--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,9 +18,9 @@
              font-style: normal; }
 
 /* Tufte CSS styles */
-html { font-size: 15px; }
+html { font-size: 12px; }
 
-body { width: 90%;
+body { width: 80%;
        margin-left: auto;
        margin-right: auto;
        padding-left: 10%;
@@ -43,7 +43,7 @@ h2 { font-style: italic;
      font-size: 2.2rem;
      line-height: 1; }
 
-h3 { font-style: italic;
+h3 { 
      font-weight: 400;
      font-size: 1.7rem;
      margin-top: 2rem;
