--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /*! style.css v1.0.0-alpha-8 | ISC License | https://github.com/ungoldman/style.css */
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
-@font-face { font-family: "Open Sans";
-             src: url("https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700");
+@import url('https://fonts.googleapis.com/css?family=Source+Sans');
+@font-face { font-family: "Source Sans";
+             src: url("https://fonts.googleapis.com/css?family=Source+Sans");
              font-weight: normal;
 font-style: normal; }
 html {
