--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ html {
   color: #303030;
   background-color: white;
   box-sizing: border-box;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Source Sans", sans-serif;
   font-size: calc(16px + 0.25vw);
   line-height: 1.4;
   -webkit-font-kerning: normal;
