--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,13 +7,12 @@
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,700" media="all">
   </head>
   <body>
-<h1><a href="/">Alexandre B A Villares</a></h1>
+<h1><a href="https://abav.lugaralgum.com">Alexandre B A Villares</a></h1>
     <div class="content">
       {{ content }}
     </div>
     <footer>
       <div class="container">
-        debug
       </div>
     </footer>
   </body>
