--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
-<!-- doctype html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://villares.github.io/assets/css/style.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,700" media="all">
   </head>
-  <body-->
+  <body>
 <h1><a href="https://abav.lugaralgum.com">Alexandre B A Villares</a></h1>
     <div class="content">
       {{ content }}
