--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
      <meta name="viewport" content="width=device-width">
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="https://villares.github.io/assets/css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,700" media="all">
+    <!-- link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,700" media="all" -->
   </head>
   <body>
 <h1><a href="https://abav.lugaralgum.com" alt="Alexandre Villares">Alexandre B A Villares</a></h1>
