--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,13 +78,13 @@ small {
   font-size: 80%;
 }
 
-.h0 {
+/*.h0 {
   font-size: 2em;
   line-height: 1.0em;
   margin-top: 1.5rem;
   margin-bottom: 0.5rem;
   position: relative;
-}
+}*/
 h1,
 h2,
 h3,
