--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,7 +232,7 @@ code,
 pre,
 kbd,
 samp {
-  font-family: menlo, inconsolata, consolas, "fira mono", "noto mono", "droid sans mono", "liberation mono", "dejavu sans mono", "ubuntu mono", monaco, "courier new", monospace;
+  font-family: inconsolata, consolas, "fira mono", "noto mono", "droid sans mono", "liberation mono", "dejavu sans mono", "ubuntu mono", monaco, "courier new", monospace;
   font-size: calc(12px + 0.25vw);
 }
 
@@ -274,6 +274,11 @@ code {
 code::before, code::after {
   letter-spacing: -0.2em;
   content: '\00a0';
+}
+
+desenho {
+  font-family: inconsolata, consolas, "fira mono", "noto mono", "droid sans mono", "liberation mono", "dejavu sans mono", "ubuntu mono", monaco, "courier new", monospace;
+  font-style: bold;
 }
 
 kbd {
