codigo para links nos <h> tags
código Luis Confraria

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,700" media="all">
+
   </head>
   <body>
 <h1><a href="https://abav.lugaralgum.com/">Alexandre B A Villares</a></h1>
@@ -16,5 +17,6 @@
       <div class="container
       </div>
     </footer>
+    <script src="scripts.js"></script>
   </body>
 </html>
