--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,6 @@
       <div class="container
       </div>
     </footer>
-    <script src="scripts.js"></script>
+    <script src="../assets/scripts.js"></script>
   </body>
 </html>
