--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
       {{ content }}
     </div>
     <footer>
-      <div class="container
+      <div class="container">
       </div>
     </footer>
     <script src="../assets/scripts.js"></script>
