--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,6 +96,7 @@ h6 {
   margin-bottom: 0.5rem;
   font-weight: 600;
   position: relative;
+  color: #000 !important;
 }
 
 h1 small,
@@ -107,7 +108,7 @@ h6 small {
   font-weight: 400;
   font-size: 0.7em;
   margin-left: 0.5em;
-  color: #777;
+  color: #000 !important;
 }
 
 h1 {
