--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ font-style: normal; }
 html {
   padding-left: 3%;
   padding-right: 3%;
-  max-width: 960px;
+  max-width: 1024px;
   color: #303030;
   background-color: white;
   box-sizing: border-box;
@@ -307,6 +307,7 @@ th {
 }
 
 table {
+  font-size: 0.8em; 
   border-collapse: collapse;
   border-spacing: 0;
   display: block;
