--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /*! style.css v1.0.0-alpha-8 | ISC License | https://github.com/ungoldman/style.css */
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
+@import url('https://fonts.bunny.net/css?family=Source+Sans+Pro');
 @font-face { font-family: "Source Sans Pro", "sans-serif";
-             src: url("https://fonts.googleapis.com/css?family=Source+Sans+Pro");
+             src: url("https://fonts.bunny.net/css?family=Source+Sans+Pro");
              font-weight: normal;
 font-style: normal; }
 html {
