--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Alexandre Villares</title>
+    <title>Alexandre B A Villares</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://abav.lugaralgum.com/assets/css/style.css">
     <link rel="stylesheet" href="https://abav.lugaralgum.com/assets/css/syntax.css">
