--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -548,7 +548,7 @@ template {
 
 div.summary-style {
     border: 1px solid black;
-    float: top right;
+    float: right;
     margin: 1em auto;
     padding: 1em;
     font-size: calc(8px + 0.25vw);
