--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,17 +85,18 @@ small {
   margin-bottom: 0.5rem;
   position: relative;
 }*/
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1 a,
+h2 a,
+h3 a,
+h4 a,
+h5 a,
+h6 a{
   line-height: 1.0em;
   margin-top: 1.5rem;
   margin-bottom: 0.5rem;
   font-weight: 600;
   position: relative;
+  color: #000 !important;
 }
 
 h1 small,
@@ -111,32 +112,26 @@ h6 small {
 
 h1 {
   font-size: 1.3em;
-  color: #000 !important;
 }
 
 h2 {
   font-size: 1.2em;
-  color: #000 !important;
 }
 
 h3 {
   font-size: 1.1em;
-  color: #000 !important;
 }
 
 h4 {
   font-size: 1em;
-  color: #000 !important;
 }
 
 h5 {
   font-size: 0.9em;
-  color: #000 !important;
 }
 
 h6 {
   font-size: 0.8em;
-  color: #575757 !important;
 }
 
 p {
