--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,15 @@ small {
   margin-bottom: 0.5rem;
   position: relative;
 }*/
-h1 a,
+
+h1 {
+  line-height: 1.0em;
+  margin-top: 1.5rem;
+  margin-bottom: 0.5rem;
+  font-weight: 600;
+  position: relative;
+}
+
 h2 a,
 h3 a,
 h4 a,
