--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ font-style: normal; }
 html {
   padding-left: 3%;
   padding-right: 3%;
-  max-width: 1280;
+  max-width: 1280px;
   color: #303030;
   background-color: white;
   box-sizing: border-box;
