tentando melhorar sumátio automático no celular
Via sugestão do Guilherme Vieira https://github.com/villares/material-aulas/issues/133

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -567,6 +567,12 @@ div.summary-style {
     background: white;
 }
 
+@media screen and (max-width: 600px) {
+  div.summary-style {
+    float: none;
+  }
+}
+
 #summary div.h1 { margin-left: 0 }
 #summary div.h2 { margin-left: 2em }
 #summary div.h3 { margin-left: 4em }
