Pinterest domain verification

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://abav.lugaralgum.com/assets/css/style.css">
     <link rel="stylesheet" href="https://abav.lugaralgum.com/assets/css/syntax.css">
     <link rel="stylesheet" href="https://fonts.bunny.net/css?family=Source+Sans+Pro:200,300,400,700" media="all">
-
+    <meta name="p:domain_verify" content="ac2ae2e7ced63fe83347fa982f2975f0"/>
   </head>
   <body>
 <h1><a href="https://abav.lugaralgum.com/">Alexandre B A Villares</a></h1>
